# chessvalidate

./: LICENCE  README  pyproject.toml  setup.cfg  setup.py
chessvalidate/: __init__.py  validate.py
chessvalidate/core/: __init__.py  adapteventcontext.py  collation.py  configuration.py  constants.py  downloadconf.py  downloadconvert.py  emailextractor.py  eventcontext.py  eventdata.py  eventdetails.py  eventparser.py  found.py  gameobjects.py  gameresults.py  names.py  report.py  reportbase.py  schedule.py  season.py
chessvalidate/gui/: __init__.py  configfile.py  configure.py  csvdownload.py  eventdetails.py  help_.py  leagues_validate.py  resultsroot.py  selectemail.py  sourceedit.py
chessvalidate/help_/: __init__.py
pylint/: pylint.conf
