[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "chessvalidate"
version = "2.0.3.dev0"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Validate source documents reporting chess game results."
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = {file = "LICENCE"}
readme = "README"
dependencies = [
    "ecfformat==1.0.4.dev0",
    "emailextract==0.7.11.dev0",
    "emailstore==1.5.5.dev0",
    "solentware-misc==1.7.dev0",
]

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/chessvalidate.git"
"Bug Tracker" = "https://github.com/RogerMarsh/chessvalidate/issues"

[tool.setuptools]
packages = [
    "chessvalidate",
    "chessvalidate.core",
    "chessvalidate.gui",
    "chessvalidate.help_",
]

[tool.setuptools.package-data]
chessvalidate = ["help_/*.txt"]
