[metadata]
name = chessvalidate
version = 1.1.dev0
description = Validate source documents reporting chess game results
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    chessvalidate
    chessvalidate.core
    chessvalidate.help_
    chessvalidate.gui
install_requires =
    ecfformat==1.0.1.dev0
    emailstore==1.5.2
    emailextract==0.7.8
    solentware-misc==1.5

[options.package_data]
chessvalidate.help = *.txt
